--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <script src="cordova.js"></script>
 <link rel="stylesheet" href="styles.5211b10d863687fb85f8.css"></head>
 
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.3b9ee5a4f705afdaf5aa.js" type="module"></script><script src="polyfills-es2015.c734d0ab89776e22a1b5.js" type="module"></script><script src="runtime-es5.15e7117f221463c20a00.js" nomodule></script><script src="polyfills-es5.62b9b09bea3def2d69e9.js" nomodule></script><script src="main-es2015.1867e73476b876d21e62.js" type="module"></script><script src="main-es5.c186b3b496e21c0c8a69.js" nomodule></script></body>
+<script src="runtime-es2015.f2a95be055a7f649beb8.js" type="module"></script><script src="polyfills-es2015.c734d0ab89776e22a1b5.js" type="module"></script><script src="runtime-es5.dcb3644f713f751e0854.js" nomodule></script><script src="polyfills-es5.62b9b09bea3def2d69e9.js" nomodule></script><script src="main-es2015.1867e73476b876d21e62.js" type="module"></script><script src="main-es5.c186b3b496e21c0c8a69.js" nomodule></script></body>
 
 </html>
