--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
 
 
   <!-- 自定义苹果的图标-->
-  <link rel="apple-touch-icon" href="assets/icons/icon-128x128.png">
+  <link rel="apple-touch-icon" href="assets/icons/icon-96x96.png">
 
   <!-- 针对不同屏幕大小，使用不同图标 -->
-  <link rel="apple-touch-icon" sizes="120x120" href="assets/icons/icon-144x144.png">
-  ....
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/icons/icon-96x96.png">
+<!--  ...-->
 
   <!-- 自定义苹果启动界面的图片-->
-  <link rel="apple-touch-startup-image" href="assets/icons/icon-512x512.png">
-
+  <link rel="apple-touch-startup-image" href="assets/icons/icon-96x96.png">
+  <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100%; width: 100%">
+    <img src="assets/icons/icon-128x128.png">
+    <h1>www.littleshin.com</h1>
+  </div>
   <!-- 针对不同屏幕大小，自定义苹果启动界面的图片-->
   <!-- iPhone Xs Max (1242px x 2688px) -->
-  <link href="assets/icons/icon-512x512.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
-  .......
+  <link href="assets/icons/icon-96x96.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+<!--  ...-->
 
   <!-- 设置状态栏样式，black-translucent、 black、default-->
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
-
-
 
 
 
